[gd_scene load_steps=41 format=2]

[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_006.png" type="Texture" id=1]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_005.png" type="Texture" id=2]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_006.png" type="Texture" id=3]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_004.png" type="Texture" id=4]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_005.png" type="Texture" id=5]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_002.png" type="Texture" id=6]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_005.png" type="Texture" id=7]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_004.png" type="Texture" id=8]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_003.png" type="Texture" id=9]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_003.png" type="Texture" id=10]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_001.png" type="Texture" id=11]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_001.png" type="Texture" id=12]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_005.png" type="Texture" id=13]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_002.png" type="Texture" id=14]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_007.png" type="Texture" id=15]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_002.png" type="Texture" id=16]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_006.png" type="Texture" id=17]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_003.png" type="Texture" id=18]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_004.png" type="Texture" id=19]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_000.png" type="Texture" id=20]
[ext_resource path="res://Skills/Call Troops/Troop/DIE/_DIE_001.png" type="Texture" id=21]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_000.png" type="Texture" id=22]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_003.png" type="Texture" id=23]
[ext_resource path="res://Skills/Call Troops/Troop/HURT/_HURT_000.png" type="Texture" id=24]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_004.png" type="Texture" id=25]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_000.png" type="Texture" id=26]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_001.png" type="Texture" id=27]
[ext_resource path="res://Skills/Call Troops/Troop/ATTACK/ATTACK_002.png" type="Texture" id=28]
[ext_resource path="res://Skills/Call Troops/Troop/WALK/_WALK_006.png" type="Texture" id=29]
[ext_resource path="res://Skills/Call Troops/Troop.gd" type="Script" id=30]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_004.png" type="Texture" id=31]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_005.png" type="Texture" id=32]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_001.png" type="Texture" id=33]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_003.png" type="Texture" id=34]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_002.png" type="Texture" id=35]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_006.png" type="Texture" id=36]
[ext_resource path="res://Skills/Call Troops/Troop/IDLE/_IDLE_000.png" type="Texture" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 7 ), ExtResource( 29 ) ],
"loop": true,
"name": "Walking",
"speed": 8.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 15 ) ],
"loop": true,
"name": "Attacking",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": true,
"name": "Hurt",
"speed": 15.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Dying",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.8073
height = 20.3096

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.1233
height = 20.3096

[node name="Troop" type="KinematicBody2D" groups=[
"Troop",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 30 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 15.7042, -0.840321 )
scale = Vector2( 0.054, 0.054 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.4178, 2.68224 )
shape = SubResource( 2 )

[node name="TroopDamageArea" type="Area2D" parent="." groups=[
"Troop",
]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TroopDamageArea"]
position = Vector2( -4.41782, 2.68224 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="TroopDamageArea" to="." method="_on_TroopDamageArea_area_entered"]
[connection signal="area_exited" from="TroopDamageArea" to="." method="_on_TroopDamageArea_area_exited"]
